--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   postgres:
     image: postgres:16
@@ -42,7 +40,7 @@ services:
       APP_NAME: couriers
       PORT: 8002
       DATABASE_URL: postgres://delivery_user:delivery_pass@postgres:5432/delivery_db
-      INTERNAL_TOKEN: super_secret_token
+      INTERNAL_TOKEN: 9f1c8d3a2b1a4e4b9b7f0d7d7d88d2aa
     ports:
       - "8002:8002"
     depends_on:
@@ -56,7 +54,7 @@ services:
       PORT: 8003
       DATABASE_URL: postgres://delivery_user:delivery_pass@postgres:5432/delivery_db
       REDIS_URL: redis://redis:6379/0
-      INTERNAL_TOKEN: super_secret_token
+      INTERNAL_TOKEN: 9f1c8d3a2b1a4e4b9b7f0d7d7d88d2aa
     ports:
       - "8003:8003"
     depends_on:
@@ -72,7 +70,7 @@ services:
       DATABASE_URL: postgres://delivery_user:delivery_pass@postgres:5432/delivery_db
       ORDERS_URL: http://orders:8001
       COURIERS_URL: http://couriers:8002
-      INTERNAL_TOKEN: super_secret_token
+      INTERNAL_TOKEN: 9f1c8d3a2b1a4e4b9b7f0d7d7d88d2aa
     ports:
       - "8004:8004"
     depends_on:
@@ -95,8 +93,13 @@ services:
   grafana:
     image: grafana/grafana:latest
     container_name: delivery_grafana
-    ports:
-      - "3000:3000"
+    environment:
+      GF_SECURITY_ADMIN_USER: admin
+      GF_SECURITY_ADMIN_PASSWORD: admin
+      GF_ANALYTICS_REPORTING_ENABLED: "false"
+      GF_ANALYTICS_CHECK_FOR_UPDATES: "false"
+      GF_UPDATE_CHECK_ENABLED: "false"
+      GF_PLUGINS_PLUGIN_ADMIN_ENABLED: "false"
     depends_on:
       - prometheus
 
@@ -104,11 +107,10 @@ services:
     build: ./web/dashboard
     container_name: delivery_dashboard
     environment:
-      NEXT_PUBLIC_ANALYTICS_URL: http://localhost:8004
-    ports:
-      - "3001:3000"
+      NEXT_PUBLIC_ANALYTICS_URL: http://analytics:8004
     depends_on:
       - analytics
+
 
 volumes:
   pg_data:
