--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,8 +36,10 @@ services:
     ports:
       - "8001:8001"
     depends_on:
-      - postgres
-      - redis
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_started
 
   couriers:
     build: ./services/couriers
@@ -50,7 +52,8 @@ services:
     ports:
       - "8002:8002"
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
 
   dispatcher:
     build: ./services/dispatcher
@@ -64,8 +67,10 @@ services:
     ports:
       - "8003:8003"
     depends_on:
-      - postgres
-      - redis
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_started
 
   analytics:
     build: ./services/analytics
@@ -80,9 +85,12 @@ services:
     ports:
       - "8004:8004"
     depends_on:
-      - postgres
-      - orders
-      - couriers
+      postgres:
+        condition: service_healthy
+      orders:
+        condition: service_started
+      couriers:
+        condition: service_started
 
   prometheus:
     image: prom/prometheus:latest
@@ -92,9 +100,12 @@ services:
     ports:
       - "9090:9090"
     depends_on:
-      - orders
-      - couriers
-      - dispatcher
+      orders:
+        condition: service_started
+      couriers:
+        condition: service_started
+      dispatcher:
+        condition: service_started
 
   grafana:
     image: grafana/grafana:latest
