--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,6 +110,8 @@ services:
   grafana:
     image: grafana/grafana:latest
     container_name: delivery_grafana
+    ports:
+    - "13000:3000"
     environment:
       GF_SECURITY_ADMIN_USER: admin
       GF_SECURITY_ADMIN_PASSWORD: admin
@@ -125,6 +127,8 @@ services:
     container_name: delivery_dashboard
     environment:
       NEXT_PUBLIC_ANALYTICS_URL: http://analytics:8004
+    ports:
+    - "13001:3000"
     depends_on:
       - analytics
 
