--- a/web/dashboard/Dockerfile
+++ b/web/dashboard/Dockerfile
@@ -1,11 +1,29 @@
+FROM node:20-alpine AS builder
+
+WORKDIR /app
+
+ARG NEXT_PUBLIC_ANALYTICS_URL
+ENV NEXT_PUBLIC_ANALYTICS_URL=${NEXT_PUBLIC_ANALYTICS_URL}
+
+COPY package.json package-lock.json* ./
+RUN npm ci
+
+COPY . .
+RUN npm run build
+
+
 FROM node:20-alpine
 
 WORKDIR /app
 
-COPY package.json ./
-RUN npm install
+ENV NODE_ENV=production
 
-COPY . .
+COPY --from=builder /app/package.json /app/package-lock.json* ./
+RUN npm ci --omit=dev
 
-RUN npm run build
+COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/public ./public
+COPY --from=builder /app/next.config.* ./ 2>/dev/null || true
+
+EXPOSE 3000
 CMD ["npm", "run", "start"]
