--- a/web/dashboard/Dockerfile
+++ b/web/dashboard/Dockerfile
@@ -5,8 +5,8 @@ WORKDIR /app
 ARG NEXT_PUBLIC_ANALYTICS_URL
 ENV NEXT_PUBLIC_ANALYTICS_URL=${NEXT_PUBLIC_ANALYTICS_URL}
 
-COPY package.json package-lock.json* ./
-RUN npm ci
+COPY package.json ./
+RUN npm install
 
 COPY . .
 RUN npm run build
@@ -18,8 +18,8 @@ WORKDIR /app
 
 ENV NODE_ENV=production
 
-COPY --from=builder /app/package.json /app/package-lock.json* ./
-RUN npm ci --omit=dev
+COPY --from=builder /app/package.json ./
+RUN npm install --omit=dev
 
 COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/public ./public
