--- a/web/dashboard/Dockerfile
+++ b/web/dashboard/Dockerfile
@@ -22,8 +22,13 @@ COPY --from=builder /app/package.json ./
 RUN npm install --omit=dev
 
 COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/next.config.* ./ 2>/dev/null || true
+
+# public/ может отсутствовать — это нормально для Next.js
+RUN mkdir -p ./public
+RUN if [ -d /app/public ]; then cp -R /app/public/* ./public/; fi
+
+# next.config может отсутствовать
+RUN true
 
 EXPOSE 3000
 CMD ["npm", "run", "start"]
