--- a/web/dashboard/Dockerfile
+++ b/web/dashboard/Dockerfile
@@ -23,12 +23,8 @@ RUN npm install --omit=dev
 
 COPY --from=builder /app/.next ./.next
 
-# public/ может отсутствовать — это нормально для Next.js
 RUN mkdir -p ./public
-RUN if [ -d /app/public ]; then cp -R /app/public/* ./public/; fi
-
-# next.config может отсутствовать
-RUN true
+RUN if [ -d /app/public ]; then cp -a /app/public/. ./public/; fi
 
 EXPOSE 3000
 CMD ["npm", "run", "start"]
