--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -126,11 +126,9 @@ services:
     build:
       context: ./web/dashboard
       dockerfile: Dockerfile
-      args:
-        NEXT_PUBLIC_ANALYTICS_URL: "http://185.244.50.22:8004"
     container_name: delivery_dashboard
     environment:
-      NEXT_PUBLIC_ANALYTICS_URL: "http://185.244.50.22:8004"
+      ANALYTICS_URL: "http://analytics:8004"
     ports:
       - "13001:3000"
     depends_on:
