--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,15 +125,20 @@ services:
   dashboard:
     build:
       context: ./web/dashboard
-      dockerfile: Dockerfile
     container_name: delivery_dashboard
     environment:
-      ANALYTICS_URL: "http://analytics:8004"
       INTERNAL_TOKEN: "9f1c8d3a2b1a4e4b9b7f0d7d7d88d2aa"
+      ORDERS_URL: "http://orders:8001"
+      COURIERS_URL: "http://couriers:8002"
+      DISPATCHER_URL: "http://dispatcher:8003"
+      ANALYTICS_URL: "http://analytics:8004"
     ports:
       - "13001:3000"
     depends_on:
       - analytics
+       orders
+      - couriers
+      - dispatcher
 
 
 
