--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -136,7 +136,7 @@ services:
       - "13001:3000"
     depends_on:
       - analytics
-       orders
+      - orders
       - couriers
       - dispatcher
 
