--- a/web/dashboard/Dockerfile
+++ b/web/dashboard/Dockerfile
@@ -2,10 +2,7 @@ FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-ARG NEXT_PUBLIC_ANALYTICS_URL
-ENV NEXT_PUBLIC_ANALYTICS_URL=${NEXT_PUBLIC_ANALYTICS_URL}
-
-COPY package.json ./
+COPY package.json package-lock.json* ./
 RUN npm install
 
 COPY . .
@@ -15,14 +12,14 @@ RUN npm run build
 FROM node:20-alpine
 
 WORKDIR /app
-
 ENV NODE_ENV=production
 
-COPY --from=builder /app/package.json ./
+COPY --from=builder /app/package.json /app/package-lock.json* ./
 RUN npm install --omit=dev
 
 COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/next.config.* ./ 2>/dev/null || true
+COPY --from=builder /app/public ./public 2>/dev/null || true
 
-# public не копируем: папка необязательна, а если нужна — добавь её в репозиторий
 EXPOSE 3000
 CMD ["npm", "run", "start"]
