--- a/web/dashboard/Dockerfile
+++ b/web/dashboard/Dockerfile
@@ -2,10 +2,14 @@ FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-COPY package.json package-lock.json* ./
+COPY package.json ./
 RUN npm install
 
 COPY . .
+
+# Важно: гарантируем наличие папки public (даже если её нет в репо)
+RUN mkdir -p /app/public
+
 RUN npm run build
 
 
@@ -14,12 +18,12 @@ FROM node:20-alpine
 WORKDIR /app
 ENV NODE_ENV=production
 
-COPY --from=builder /app/package.json /app/package-lock.json* ./
+COPY --from=builder /app/package.json ./
+COPY --from=builder /app/package-lock.json ./package-lock.json
 RUN npm install --omit=dev
 
 COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/next.config.* ./ 2>/dev/null || true
-COPY --from=builder /app/public ./public 2>/dev/null || true
+COPY --from=builder /app/public ./public
 
 EXPOSE 3000
 CMD ["npm", "run", "start"]
